# papaya

./: .gitignore  CMakeLists.txt  LICENSE  README.md  papaya.sln  repos — skrót .lnk
docs/: Papaya - sprawozdanie.docx
enc_temp_folder/c35ba33cb327aa5a87d909734d359/: scene_level_editor.hpp
papaya/: CMakeLists.txt  MainMenu.h  drawingScreen0.json  drawingScreen1.json  papaya.cpp  papaya.vcxproj  papaya.vcxproj.filters  scene_test_room.h
papaya/assets/: slashussy.aseprite
papaya/assets/editor/: chunk--1--1.json  chunk--1--2.json  chunk--1--3.json  chunk--1-0.json  chunk--1-1.json  chunk--2--2.json  chunk--2--3.json  chunk--2-0.json  chunk-0--1.json  chunk-0--2.json  chunk-0-0.json  chunk-1--1.json  chunk-1-0.json  last_edited_chunk.autosave.json
papaya/assets/maps/: test.map
papaya/saved_chunks/: chunk-0-0.json  chunk-10-0.json
papaya/src/: Player.h  papaya.cpp
papaya/src/Audio/: AudioManager.cpp  AudioManager.hpp  audio_manager.h
papaya/src/Core/: GameConstants.hpp  GameWrapper.cpp  GameWrapper.hpp  InputHelper.h  MathUtils.h  Physics.hpp
papaya/src/Entities/: Bat.h  Dummy.h  Enemy.h  Entity.h  MageBoss.h  Player.h  RabbitEnemy.h  Wall.h  checkpoint_entity.hpp  entities.cpp  entities.hpp  item_entity.hpp  mage_boss.h  rabbit.h
papaya/src/Entities/Enemies/: mage_boss.h  rabbit.h
papaya/src/Entities/Environment/: Wall.h
papaya/src/Entities/Player/: Player.cpp  Player.h  PlayerConstants.h  PlayerTypes.h
papaya/src/GUI/: GUIRayLib.h  GUIRayLib.hpp  GUI_raylib.hpp
papaya/src/Map/: map.cpp  map.hpp
papaya/src/Saves/: entities.cpp  entities.hpp  map.cpp  map.hpp  save_data.h  save_manager.h  saves.cpp  saves.hpp
papaya/src/Scenes/: MainMenu.h  MainMenu.hpp  Test.hpp  debug_room.h  main_menu.hpp  scene_functions.hpp  scene_game.cpp  scene_game.hpp  scene_test_room.h
papaya/src/level_editor/: functions_level_editor.hpp  level_editor.hpp  scene_level_editor.hpp
